--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,9 +1,9 @@
-<h1>WELCOME TO KEEP UP</h1>
 
 <!-- <button type="button" onclick="location.href = '#!/login'" class="btn btn-secondary">LOGIN</button>
-<button type="button" onclick="location.href = '#!/register'" class="btn btn-secondary">REGISTER</button> -->
-
-<div class="homeContainer">
+    <button type="button" onclick="location.href = '#!/register'" class="btn btn-secondary">REGISTER</button> -->
+    
+<div class="homeContainer d-flex flex-row">
+    <h1>WELCOME TO KEEP UP</h1>
     <div class="loginAndRegister">
         <div class="loginContainer">
             <section>
