--- a/client/partials/purchases.html
+++ b/client/partials/purchases.html
@@ -39,7 +39,7 @@
             </div>
             <div class="totalPurchases">
                 <h2><strong>Total Amount Spent On Purchases</strong></h2>
-                <h2>${{total}}</h2>
+                <h2 class="purchasesTotal">${{total}}</h2>
                 <i class="far fa-money-bill-alt fa-4x"></i>
             </div>
         </div>
