user able to add occasion and purchase

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -3,7 +3,7 @@
     <button type="button" onclick="location.href = '#!/register'" class="btn btn-secondary">REGISTER</button> -->
     
 <div class="homeContainer d-flex flex-row">
-    <h1>WELCOME TO KEEP UP</h1>
+    <h1>WELCOME TO <strong>KEEP-UP</strong></h1> <br>
     <div class="loginAndRegister">
         <div class="loginContainer">
             <section>
