--- a/client/partials/occasions.html
+++ b/client/partials/occasions.html
@@ -1,6 +1,6 @@
 <div class=occasionPage>
     <div class="occasionHeader">
-        <h1>Budget Any Occasion!</h1>
+        <h1>Budget For Any Occasion!</h1>
     </div>
     <div class="occasionsPageContainer d-flex flex-row">
         <div class="individualOccContainer">
