--- a/client/css/main.css
+++ b/client/css/main.css
@@ -12,11 +12,15 @@ h1 {
   color: black;
   text-decoration: none !important; }
 
+.logo {
+  font-family: 'Yellowtail', cursive; }
+
 .occasionHeader h1 {
   margin: 20px 20px 0 20px;
-  font-family: 'Courgette', cursive; }
+  font-family: 'Yellowtail', cursive; }
 
 .occasionsPageContainer {
+  background-color: rgba(255, 255, 255, 0.75);
   width: 95%;
   margin: 0 auto; }
   .occasionsPageContainer .individualOccContainer {
@@ -54,7 +58,7 @@ h1 {
     .occasionCard a .fa-calendar-alt {
       color: #3f5023; }
     .occasionCard a h6 {
-      color: #3f5023;
+      color: black;
       text-decoration: none;
       font-family: 'Philosopher', sans-serif; }
   .occasionCard .occasionTitle {
@@ -73,14 +77,17 @@ a:hover {
 
 .individualHeader {
   text-align: center;
-  margin: 20px 0 20px 0; }
+  margin: 20px 0 20px 0;
+  font-family: 'Yellowtail', cursive; }
 
 .individualOccasionCard {
+  font-family: 'Philosopher', sans-serif;
   margin: 0 auto;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   width: 90%; }
   .individualOccasionCard strong {
-    text-decoration: underline; }
+    text-decoration: underline;
+    font-family: 'Yellowtail', cursive; }
   .individualOccasionCard .dataAndNumbers {
     width: 100%;
     position: relative;
@@ -121,14 +128,17 @@ a:hover {
 
 .secondaryHeader {
   margin-top: 35px; }
-  .secondaryHeader h4 {
+  .secondaryHeader h2 {
     margin-left: 20px;
-    font-family: 'Courgette', cursive; }
+    font-family: 'Yellowtail', cursive; }
+
+.purchasesContainer {
+  margin: 0 auto; }
 
 .purchasesHeader {
   margin: 20px; }
   .purchasesHeader h1 {
-    font-family: 'Courgette', cursive; }
+    font-family: 'Yellowtail', cursive; }
 
 .secondaryPurchaseHeader {
   margin: 25px 0 0 20px; }
@@ -154,7 +164,9 @@ a:hover {
   text-align: center; }
   .totalPurchases h2 {
     margin: 20px;
-    font-family: 'Courgette', cursive; }
+    font-family: 'Philosopher', sans-serif; }
+  .totalPurchases strong {
+    font-family: 'Yellowtail', cursive; }
 
 .purchasesTotal h2 {
   font-family: 'Philosopher', sans-serif !important; }
@@ -174,6 +186,12 @@ a:hover {
   background-image: url("../images/leaves.jpg");
   background-size: cover;
   background-repeat: no-repeat; }
+  .homeContainer h1 {
+    margin: 50px;
+    font-size: 70px;
+    font-family: 'Philosopher', sans-serif; }
+  .homeContainer strong {
+    font-family: 'Yellowtail', cursive; }
 
 .homeContainer {
   width: 100%; }
@@ -195,3 +213,6 @@ a:hover {
     width: 80%;
     margin: 0 auto;
     margin-bottom: 50px; }
+  .loginAndRegister h4 {
+    margin-top: 25px;
+    font-family: 'Philosopher', sans-serif; }
