--- a/client/partials/nav.html
+++ b/client/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" ng-controller="NavCtrl">
-        <a class="navbar-brand logo" href="#">Keep Up</a>
+        <a class="navbar-brand logo" href="#">Keep-Up</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -7,7 +7,6 @@
             <ul class="navbar-nav ml-auto nav justify-content-end">
                 <li class="nav-item" ng-repeat="item in navBar"> 
                     <a class="nav-link" ng-click="go(item.url)" ng-show="{{item.bang}}loggedIn" href="{{item.url}}">{{item.name}}</a>
-                    <!-- <a class="nav-link" ng-click="go(item.url)" href="{{item.url}}">{{item.name}}</a> -->
                 </li>
                 <li>
                     <form method="POST" class="form-inline nav-item" action="/logout">
