--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -15,16 +15,25 @@ h1 {
     text-decoration: none !important;
 }
 
+//////////////////////// NAV ////////////////////////////
+
+.logo {
+    font-family: 'Yellowtail', cursive;
+}
+
 //////////////////////// OCCASIONS ////////////////////////////
 
 .occasionHeader {
     h1 {
         margin: 20px 20px 0 20px;
-        font-family: 'Courgette', cursive;
+        // font-family: 'Courgette', cursive;
+        font-family: 'Yellowtail', cursive;
+
     }
 }
 
 .occasionsPageContainer {
+    background-color: rgba(255, 255, 255, 0.75);
     width: 95%;
     margin: 0 auto;
     .individualOccContainer {
@@ -74,7 +83,7 @@ h1 {
             color:rgb(63, 80, 35);
         }
         h6 {
-            color: rgb(63, 80, 35);
+            color: black;
             text-decoration: none;
             font-family: 'Philosopher', sans-serif;
         }
@@ -106,11 +115,19 @@ a:hover {
 .individualHeader{
     text-align: center;
     margin: 20px 0 20px 0;
+    // font-family: 'Courgette', cursive;
+    font-family: 'Yellowtail', cursive;
+
 }
 
 .individualOccasionCard {
+    font-family: 'Philosopher', sans-serif ;
     strong {
         text-decoration: underline;
+        // font-family: 'Courgette', cursive;
+        font-family: 'Yellowtail', cursive;
+
+
     }
     margin: 0 auto;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -164,18 +181,26 @@ a:hover {
 
 .secondaryHeader {
     margin-top: 35px;
-    h4 {
+    h2 {
         margin-left: 20px;
-        font-family: 'Courgette', cursive;
+        // font-family: 'Courgette', cursive;
+        font-family: 'Yellowtail', cursive;
+
     }
 }
 
 //////////////////////// PURCHASES ////////////////////////////
 
+.purchasesContainer {
+    margin: 0 auto;
+}
+
 .purchasesHeader {
     margin: 20px;
     h1 {
-        font-family: 'Courgette', cursive;
+        // font-family: 'Courgette', cursive;
+        font-family: 'Yellowtail', cursive;
+
     }
 }
 
@@ -209,7 +234,11 @@ a:hover {
     text-align: center;
     h2 {
         margin: 20px;
-        font-family: 'Courgette', cursive;
+        // font-family: 'Courgette', cursive;
+        font-family: 'Philosopher', sans-serif
+    }
+    strong {
+        font-family: 'Yellowtail', cursive;
     }
 }
 
@@ -243,6 +272,18 @@ a:hover {
     background-image: url("../images/leaves.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    h1{
+        margin:50px;
+        font-size: 70px;
+        font-family: 'Philosopher', sans-serif;
+
+    }
+    strong {
+        // font-family: 'Marck Script', cursive;
+        font-family: 'Yellowtail', cursive;
+
+
+    }
 }
 
 .homeContainer{
@@ -269,6 +310,10 @@ a:hover {
         width: 80%;
         margin: 0 auto;
         margin-bottom: 50px;
+    }
+    h4 {
+        margin-top: 25px;
+        font-family: 'Philosopher', sans-serif;
     }
 }
 
