client side controllers have been cleaned up

--- a/client/partials/individualOccasion.html
+++ b/client/partials/individualOccasion.html
@@ -51,7 +51,7 @@
 </div>
 <div class="noPurchasesAlert" style="margin: 20px 25px 25px 25px">
     <div ng-if="!userPurchases" class="alert alert-info" role="alert">
-        <strong>No {{occasion[0].title}} Purchases have been added yet!</strong> Click on 'Purchases' to track your first Purchase.
+        <strong>No {{occasion[0].title}} Purchases have been added yet!</strong> Click on <a href="#!/purchases" class="alert-link">Purchases</a> to track your first Purchase.
     </div>
 </div>
 <div class="purchaseCardContainer d-flex flex-row flex-wrap">
