--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -29,17 +29,17 @@
             <section>
                 <div class="registerForm">
                     First Name:
-                    <input type="text" class="form-control" ng-model="userAccount.first_name">
+                    <input type="text" class="form-control" ng-model="newUserAccount.first_name">
                     <br> Last Name:
-                    <input type="text" class="form-control" ng-model="userAccount.last_name">
+                    <input type="text" class="form-control" ng-model="newUserAccount.last_name">
                     <br> Username:
-                    <input type="text" class="form-control" ng-model="userAccount.username">
+                    <input type="text" class="form-control" ng-model="newUserAccount.username">
                     <br> Email:
-                    <input type="text" class="form-control" ng-model="userAccount.email">
+                    <input type="text" class="form-control" ng-model="newUserAccount.email">
                     <br> Password:
-                    <input type="text" class="form-control" ng-model="userAccount.password">
+                    <input type="text" class="form-control" ng-model="newUserAccount.password">
                     <br> Password Confirmation:
-                    <input type="text" class="form-control" ng-model="userAccount.passwordConfirmation">
+                    <input type="text" class="form-control" ng-model="newUserAccount.passwordConfirmation">
                     <br>
                     <button type="button" class="btn btn-secondary" ng-click="register()">Register</button>
                 </div>
