--- a/client/css/main.css
+++ b/client/css/main.css
@@ -141,7 +141,8 @@ a:hover {
     font-family: 'Yellowtail', cursive; }
 
 .secondaryPurchaseHeader {
-  margin: 25px 0 0 20px; }
+  margin: 25px 0 0 20px;
+  font-family: 'Yellowtail', cursive; }
 
 .addContainer {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
